Layout issues changed in priest section

--- a/css/main.scss
+++ b/css/main.scss
@@ -108,6 +108,14 @@ body{
     color: $secondary;
   }
 
+  .flickity-viewport{
+    height: 430px !important;
+
+    @media (max-width: 1024px) {
+        height: 465px !important;
+    }
+  }
+
 }
 
 #site-header {
